--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "no-useless-constructor": "off",
     "no-var": "error",
     "prefer-const": "error",
-    "@typescript-eslint/no-unused-vars": "error"
+    "no-shadow": "error"
   },
   "parserOptions": {
     "ecmaVersion": 2015,
