--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build && node dist/main.js",
-    "dev:start": "node -r ts-node/register ./src/main.ts",
+    "dev:start": "node -r dotenv/config -r ts-node/register ./src/main.ts",
     "dev": "nodemon",
     "build": "tsc",
     "lint": "eslint ./src/**/*.ts",
