--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "prettier": "prettier --write \"./src/**/*.ts\""
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "depsin": "^1.2.4",
+    "express": "^4.17.1",
+    "faker": "^4.1.0",
     "got": "^9.6.0",
     "mongoose": "^5.6.8",
     "ts-domain": "^1.4.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/cheerio": "^0.22.12",
+    "@types/express": "^4.17.0",
+    "@types/faker": "^4.1.5",
     "@types/got": "^9.6.5",
     "@types/mongoose": "^5.5.11",
     "@types/node": "^12.6.9",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
